--- a/JInstantSearch/app/src/main/res/values/strings.xml
+++ b/JInstantSearch/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Instant Search</string>
+    <string name="app_name">JInstant Search</string>
     <string name="action_settings">Settings</string>
     <string name="activity_local_search">Local Search</string>
     <string name="activity_remote_search">Remote Search</string>
