--- a/KInstantSearch/app/src/main/res/values/strings.xml
+++ b/KInstantSearch/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
-    <string name="app_name">KInstantSearch</string>
+    <string name="app_name">KInstant Search</string>
     <string name="action_settings">Settings</string>
+    <string name="activity_local_search">Local Search</string>
+    <string name="activity_remote_search">Remote Search</string>
+    <string name="hint_search">Type contact name</string>
+    <string name="btn_local_search">Local Search</string>
+    <string name="btn_remote_search">Remote Search</string>
+    <string name="text_local_search">Performs local search on array list. First it fetches all contacts and performs local search</string>
+    <string name="text_remote_search">Performs Remote Search by sending HTTP call every time search query is entered</string>
 </resources>
