--- a/AndroidPatternsApp/kmvp-app/src/main/res/values/strings.xml
+++ b/AndroidPatternsApp/kmvp-app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Kotlin Clean Architecture Instant Search</string>
+    <string name="app_name">Kotlin Instant Search</string>
     <string name="action_settings">Settings</string>
     <string name="activity_local_search">Local Search</string>
     <string name="activity_remote_search">Remote Search</string>
